// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigate to extension page renders 1`] = `
<div>
  <div
    class="topBar"
  >
    <div
      class="items"
    >
      <i
        class="Icon material interactive focusable"
        data-testid="home-button"
        tabindex="0"
      >
        <span
          class="icon"
          data-icon-name="home"
        >
          home
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-back"
      >
        <span
          class="icon"
          data-icon-name="arrow_back"
        >
          arrow_back
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-forward"
      >
        <span
          class="icon"
          data-icon-name="arrow_forward"
        >
          arrow_forward
        </span>
      </i>
    </div>
    <div
      class="items"
    />
  </div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
      data-testid="status-bar-left"
    >
      <div
        class="item"
      >
        <div
          data-testid="app-update-not-available"
        >
          No new updates available
        </div>
      </div>
    </div>
    <div
      class="rightSide"
      data-testid="status-bar-right"
    />
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;

exports[`navigate to extension page when extension navigates to child route renders 1`] = `
<div>
  <div
    class="topBar"
  >
    <div
      class="items"
    >
      <i
        class="Icon material interactive focusable"
        data-testid="home-button"
        tabindex="0"
      >
        <span
          class="icon"
          data-icon-name="home"
        >
          home
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-back"
      >
        <span
          class="icon"
          data-icon-name="arrow_back"
        >
          arrow_back
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-forward"
      >
        <span
          class="icon"
          data-icon-name="arrow_forward"
        >
          arrow_forward
        </span>
      </i>
    </div>
    <div
      class="items"
    />
  </div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
      data-testid="status-bar-left"
    >
      <div
        class="item"
      >
        <div
          data-testid="app-update-not-available"
        >
          No new updates available
        </div>
      </div>
    </div>
    <div
      class="rightSide"
      data-testid="status-bar-right"
    />
  </div>
  <div>
    Child page
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;

exports[`navigate to extension page when extension navigates to route with parameters renders 1`] = `
<div>
  <div
    class="topBar"
  >
    <div
      class="items"
    >
      <i
        class="Icon material interactive focusable"
        data-testid="home-button"
        tabindex="0"
      >
        <span
          class="icon"
          data-icon-name="home"
        >
          home
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-back"
      >
        <span
          class="icon"
          data-icon-name="arrow_back"
        >
          arrow_back
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-forward"
      >
        <span
          class="icon"
          data-icon-name="arrow_forward"
        >
          arrow_forward
        </span>
      </i>
    </div>
    <div
      class="items"
    />
  </div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
      data-testid="status-bar-left"
    >
      <div
        class="item"
      >
        <div
          data-testid="app-update-not-available"
        >
          No new updates available
        </div>
      </div>
    </div>
    <div
      class="rightSide"
      data-testid="status-bar-right"
    />
  </div>
  <div>
    <ul>
      <li>
        some-string-value-from-navigate
      </li>
      <li>
        126
      </li>
      <li>
        some-array-value-from-navigate
      </li>
    </ul>
    <button
      data-testid="button-to-change-page-parameters"
      type="button"
    >
      Some button
    </button>
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;

exports[`navigate to extension page when extension navigates to route without parameters renders 1`] = `
<div>
  <div
    class="topBar"
  >
    <div
      class="items"
    >
      <i
        class="Icon material interactive focusable"
        data-testid="home-button"
        tabindex="0"
      >
        <span
          class="icon"
          data-icon-name="home"
        >
          home
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-back"
      >
        <span
          class="icon"
          data-icon-name="arrow_back"
        >
          arrow_back
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-forward"
      >
        <span
          class="icon"
          data-icon-name="arrow_forward"
        >
          arrow_forward
        </span>
      </i>
    </div>
    <div
      class="items"
    />
  </div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
      data-testid="status-bar-left"
    >
      <div
        class="item"
      >
        <div
          data-testid="app-update-not-available"
        >
          No new updates available
        </div>
      </div>
    </div>
    <div
      class="rightSide"
      data-testid="status-bar-right"
    />
  </div>
  <div>
    <ul>
      <li>
        some-string-value
      </li>
      <li>
        42
      </li>
      <li>
        some-array-value,some-other-array-value
      </li>
    </ul>
    <button
      data-testid="button-to-change-page-parameters"
      type="button"
    >
      Some button
    </button>
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;

exports[`navigate to extension page when extension navigates to route without parameters when changing page parameters renders 1`] = `
<div>
  <div
    class="topBar"
  >
    <div
      class="items"
    >
      <i
        class="Icon material interactive focusable"
        data-testid="home-button"
        tabindex="0"
      >
        <span
          class="icon"
          data-icon-name="home"
        >
          home
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-back"
      >
        <span
          class="icon"
          data-icon-name="arrow_back"
        >
          arrow_back
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-forward"
      >
        <span
          class="icon"
          data-icon-name="arrow_forward"
        >
          arrow_forward
        </span>
      </i>
    </div>
    <div
      class="items"
    />
  </div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
      data-testid="status-bar-left"
    >
      <div
        class="item"
      >
        <div
          data-testid="app-update-not-available"
        >
          No new updates available
        </div>
      </div>
    </div>
    <div
      class="rightSide"
      data-testid="status-bar-right"
    />
  </div>
  <div>
    <ul>
      <li>
        some-changed-string-value
      </li>
      <li>
        84
      </li>
      <li>
        some-changed-array-value,some-other-changed-array-value
      </li>
    </ul>
    <button
      data-testid="button-to-change-page-parameters"
      type="button"
    >
      Some button
    </button>
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;
